image too long on mobile trying to fix

--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,7 @@ nav.nav-projects {
 
 .me-pic-home {
     width: 400px;
+    height: auto;
     margin-left: -5rem;
     border-radius: 2rem;
     border: 1rem solid var(--msd-pink-2-30);
